WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74444
[Blackberry] Fix a leak in BackingStore class
https://bugs.webkit.org/show_bug.cgi?id=74444
Summary
[Blackberry] Fix a leak in BackingStore class
arvid2.nilsson
Reported
2011-12-13 13:32:21 PST
Don't leak the blit generation mutex+cond var
Attachments
Patch
(585 bytes, patch)
2011-12-13 13:42 PST
,
arvid2.nilsson
no flags
Details
Formatted Diff
Diff
Patch
(1.21 KB, patch)
2011-12-13 14:17 PST
,
arvid2.nilsson
no flags
Details
Formatted Diff
Diff
Patch
(1.27 KB, patch)
2011-12-13 14:22 PST
,
arvid2.nilsson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
arvid2.nilsson
Comment 1
2011-12-13 13:42:49 PST
Created
attachment 119078
[details]
Patch
arvid2.nilsson
Comment 2
2011-12-13 14:15:58 PST
Comment on
attachment 119078
[details]
Patch There's no ChangeLog entry
arvid2.nilsson
Comment 3
2011-12-13 14:17:32 PST
Created
attachment 119082
[details]
Patch
Antonio Gomes
Comment 4
2011-12-13 14:19:15 PST
Comment on
attachment 119082
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=119082&action=review
> Source/WebKit/ChangeLog:7 > +2011-12-13 Arvid Nilsson <
anilsson@rim.com
> > + > + [Blackberry] Fix a leak in BackingStore class > +
https://bugs.webkit.org/show_bug.cgi?id=74444
> + > + Reviewed by NOBODY (OOPS!). > +
Arvid, could you add to the changelog what was leaking?
arvid2.nilsson
Comment 5
2011-12-13 14:22:46 PST
Created
attachment 119083
[details]
Patch
Antonio Gomes
Comment 6
2011-12-13 14:25:29 PST
Comment on
attachment 119083
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=119083&action=review
> Source/WebKit/ChangeLog:9 > + Don't leak the blit generation condvar and mutex. > + > +
https://bugs.webkit.org/show_bug.cgi?id=74444
> + > + Reviewed by NOBODY (OOPS!).
The order is bug title, bug url, reviewed by, fix explanation :) ok for now though.
WebKit Review Bot
Comment 7
2011-12-13 15:40:02 PST
Comment on
attachment 119083
[details]
Patch Clearing flags on attachment: 119083 Committed
r102713
: <
http://trac.webkit.org/changeset/102713
>
WebKit Review Bot
Comment 8
2011-12-13 15:40:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug