[Blackberry] Fix a leak in BackingStore class

Don't leak the blit generation condvar and mutex.

https://bugs.webkit.org/show_bug.cgi?id=74444

Patch by Arvid Nilsson <anilsson@rim.com> on 2011-12-13
Reviewed by Antonio Gomes.

* blackberry/Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::~BackingStorePrivate):

Canonical link: https://commits.webkit.org/91101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102713 268f45cc-cd09-0410-ab3c-d52691b4dbfc